feat: Implement On-Call Schedule Manager, Post-Mortem Generator, and Runbook Engine
- Added OnCallManager class to manage on-call schedules, including current and next on-call users, schedule creation, and escalation policies.
- Introduced PostMortemGenerator class for generating AI-powered post-mortem documents from incidents, including summaries, impacts, root causes, and action items.
- Developed RunbookEngine class to execute automated remediation steps, including manual and automated runbook steps, with support for various action types (kubectl, AWS CLI, etc.).
- Created types and interfaces for incident management, including Incident, Runbook, and PostMortem structures, to facilitate data handling and ensure type safety.

--- a/package.json
+++ b/package.json
@@ -98,6 +98,54 @@
         "title": "Detect Performance Regressions",
         "category": "Vitals",
         "icon": "$(warning)"
+      },
+      {
+        "command": "vitals.createIncident",
+        "title": "Create Incident",
+        "category": "Vitals",
+        "icon": "$(alert)"
+      },
+      {
+        "command": "vitals.showIncident",
+        "title": "Show Incident Details",
+        "category": "Vitals",
+        "icon": "$(info)"
+      },
+      {
+        "command": "vitals.executeRunbook",
+        "title": "Execute Runbook",
+        "category": "Vitals",
+        "icon": "$(play)"
+      },
+      {
+        "command": "vitals.generatePostMortem",
+        "title": "Generate Post-Mortem",
+        "category": "Vitals",
+        "icon": "$(note)"
+      },
+      {
+        "command": "vitals.showOnCallSchedule",
+        "title": "Show On-Call Schedule",
+        "category": "Vitals",
+        "icon": "$(calendar)"
+      },
+      {
+        "command": "vitals.configureIntegration",
+        "title": "Configure Incident Integration",
+        "category": "Vitals",
+        "icon": "$(plug)"
+      },
+      {
+        "command": "vitals.addIncidentAnnotation",
+        "title": "Add Incident Annotation",
+        "category": "Vitals",
+        "icon": "$(comment)"
+      },
+      {
+        "command": "vitals.addIncidentHypothesis",
+        "title": "Add Incident Hypothesis",
+        "category": "Vitals",
+        "icon": "$(lightbulb)"
       }
     ],
     "viewsContainers": {
@@ -190,6 +238,54 @@
           "type": "number",
           "default": 1000,
           "description": "Alert when monthly costs exceed this amount (USD)"
+        },
+        "vitals.incidentIntegrations": {
+          "type": "object",
+          "default": {},
+          "description": "Configuration for incident management integrations",
+          "properties": {
+            "pagerduty": {
+              "type": "object",
+              "properties": {
+                "enabled": { "type": "boolean" },
+                "serviceId": { "type": "string" }
+              }
+            },
+            "slack": {
+              "type": "object",
+              "properties": {
+                "enabled": { "type": "boolean" },
+                "channel": { "type": "string" }
+              }
+            },
+            "teams": {
+              "type": "object",
+              "properties": {
+                "enabled": { "type": "boolean" }
+              }
+            }
+          }
+        },
+        "vitals.enableIncidentManagement": {
+          "type": "boolean",
+          "default": true,
+          "description": "Enable incident management features"
+        },
+        "vitals.runbookAutoExecute": {
+          "type": "boolean",
+          "default": false,
+          "description": "Automatically execute runbooks when incidents are detected"
+        },
+        "vitals.postMortemTemplate": {
+          "type": "string",
+          "enum": ["standard", "detailed", "minimal"],
+          "default": "standard",
+          "description": "Post-mortem document template style"
+        },
+        "vitals.onCallNotifications": {
+          "type": "boolean",
+          "default": true,
+          "description": "Show VS Code notifications when on-call"
         },
         "vitals.traceProvider": {
           "type": "string",
