--- a/package.json
+++ b/package.json
@@ -301,21 +301,31 @@
             "pagerduty": {
               "type": "object",
               "properties": {
-                "enabled": { "type": "boolean" },
-                "serviceId": { "type": "string" }
+                "enabled": {
+                  "type": "boolean"
+                },
+                "serviceId": {
+                  "type": "string"
+                }
               }
             },
             "slack": {
               "type": "object",
               "properties": {
-                "enabled": { "type": "boolean" },
-                "channel": { "type": "string" }
+                "enabled": {
+                  "type": "boolean"
+                },
+                "channel": {
+                  "type": "string"
+                }
               }
             },
             "teams": {
               "type": "object",
               "properties": {
-                "enabled": { "type": "boolean" }
+                "enabled": {
+                  "type": "boolean"
+                }
               }
             }
           }
@@ -332,7 +342,11 @@
         },
         "vitals.postMortemTemplate": {
           "type": "string",
-          "enum": ["standard", "detailed", "minimal"],
+          "enum": [
+            "standard",
+            "detailed",
+            "minimal"
+          ],
           "default": "standard",
           "description": "Post-mortem document template style"
         },
@@ -348,7 +362,13 @@
         },
         "vitals.cicdPlatform": {
           "type": "string",
-          "enum": ["github_actions", "gitlab_ci", "jenkins", "circleci", "azure_devops"],
+          "enum": [
+            "github_actions",
+            "gitlab_ci",
+            "jenkins",
+            "circleci",
+            "azure_devops"
+          ],
           "default": "github_actions",
           "description": "CI/CD platform integration"
         },
@@ -378,13 +398,21 @@
         },
         "vitals.featureFlagProvider": {
           "type": "string",
-          "enum": ["launchdarkly", "splitio", "unleash", "none"],
+          "enum": [
+            "launchdarkly",
+            "splitio",
+            "unleash",
+            "none"
+          ],
           "default": "none",
           "description": "Feature flag provider integration"
         },
         "vitals.traceProvider": {
           "type": "string",
-          "enum": ["jaeger", "opentelemetry"],
+          "enum": [
+            "jaeger",
+            "opentelemetry"
+          ],
           "default": "jaeger",
           "description": "Active distributed tracing provider"
         },
@@ -407,39 +435,6 @@
           "type": "boolean",
           "default": false,
           "description": "Automatically analyze traces when opening a project"
-        },
-        "vitals.alertmanagerUrl": {
-          "type": "string",
-          "description": "URL of the Alertmanager server.",
-          "default": "http://localhost:9093"
-        },
-        "vitals.lokiUrl": {
-          "type": "string",
-          "description": "URL of the Loki server.",
-          "default": "http://localhost:3100"
-        },
-        "vitals.logQuery": {
-          "type": "string",
-          "description": "Default LogQL query to fetch logs.",
-          "default": "{job=\"varlogs\"}"
-        },
-        "vitals.cloudProviders": {
-          "type": "array",
-          "default": [],
-          "description": "List of enabled cloud providers (managed internally)",
-          "items": {
-            "type": "string"
-          }
-        },
-        "vitals.enableCostTracking": {
-          "type": "boolean",
-          "default": true,
-          "description": "Enable cost tracking across cloud providers"
-        },
-        "vitals.costAlertThreshold": {
-          "type": "number",
-          "default": 1000,
-          "description": "Alert when monthly costs exceed this amount (USD)"
         }
       }
     }
@@ -458,11 +453,12 @@
     "docs:preview": "vitepress preview docs"
   },
   "dependencies": {
+    "@aws-sdk/client-cloudwatch": "^3.980.0",
+    "@aws-sdk/client-xray": "^3.980.0",
     "@observablehq/plot": "^0.6.17",
     "axios": "^1.13.4",
-    "react-dom": "^19.2.4",
-    "@aws-sdk/client-cloudwatch": "^3.980.0",
-    "@aws-sdk/client-xray": "^3.980.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.29.0",
@@ -470,8 +466,8 @@
     "@babel/preset-typescript": "^7.28.5",
     "@types/jest": "^30.0.0",
     "@types/mocha": "^10.0.10",
-    "@types/react": "^19.2.10",
-    "@types/react-dom": "^19.2.3",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@types/vscode": "^1.108.1",
     "babel-loader": "^10.0.0",
     "css-loader": "^7.1.3",
