--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vitals",
   "displayName": "Vitals",
   "description": "Monitor application metrics and logs in real-time within Visual Studio Code.",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "publisher": "theaniketraj",
   "repository": {
     "type": "git",
@@ -455,6 +455,7 @@
   "dependencies": {
     "@aws-sdk/client-cloudwatch": "^3.980.0",
     "@aws-sdk/client-xray": "^3.980.0",
+    "@fortawesome/fontawesome-free": "^7.2.0",
     "@observablehq/plot": "^0.6.17",
     "axios": "^1.13.5",
     "react": "^18.3.1",
