--- a/cli/package.json
+++ b/cli/package.json
@@ -25,7 +25,8 @@
     "commander": "^11.1.0",
     "axios": "^1.6.0",
     "chalk": "^4.1.2",
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "@octokit/rest": "^20.0.2"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
