--- a/cli/package.json
+++ b/cli/package.json
@@ -22,15 +22,15 @@
   "author": "Aniket Raj",
   "license": "MIT",
   "dependencies": {
-    "commander": "^11.1.0",
+    "@octokit/rest": "^20.0.2",
     "axios": "^1.6.0",
     "chalk": "^4.1.2",
-    "js-yaml": "^4.1.0",
-    "@octokit/rest": "^20.0.2"
+    "commander": "^11.1.0",
+    "js-yaml": "^4.1.0"
   },
   "devDependencies": {
-    "@types/node": "^20.10.0",
     "@types/js-yaml": "^4.0.9",
+    "@types/node": "^20.19.35",
     "typescript": "^5.3.0"
   }
 }
